aks/wordpress-manifests/netpol/egress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-wordpress 
  namespace: wordpress
spec:
  podSelector:
    matchLabels: 
      app: wordpress 
  policyTypes:
  - Egress  # this egress blocks wp's theme installation
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mariadb
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
